--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div>
-  <img src="./images/image-qr-code.png" height="250px", width="250px" id="qr">
+  <img src="./images/image-qr-code.png" height="250px" alt="qr-image" width="250px" id="qr">
 
   <h3 id="title">Improve your front-end skills by building projects</h3>
   <p id="content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p> 
